terraform/modules/grafana/files/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: ${grafana_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${grafana_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 80
